--- a/package.json
+++ b/package.json
@@ -9,13 +9,29 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.22.3",
+    "@react-native-community/datetimepicker": "^7.6.2",
+    "@react-navigation/native": "^6.1.14",
+    "@react-navigation/stack": "^6.3.25",
+    "axios": "^1.6.7",
+    "date-fns": "^3.3.1",
     "expo": "~50.0.8",
+    "expo-file-system": "^16.0.7",
     "expo-status-bar": "~1.11.1",
+    "papaparse": "^5.4.1",
     "react": "18.2.0",
-    "react-native": "0.73.4"
+    "react-native": "0.73.4",
+    "react-native-fs": "^2.20.0",
+    "react-native-safe-area-context": "^4.9.0",
+    "react-native-screens": "^3.29.0",
+    "react-native-xml2js": "^1.0.3",
+    "xml-js": "^1.6.11"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@types/react": "^18.2.61",
+    "@types/react-native": "^0.73.0",
+    "typescript": "^5.3.3"
   },
   "private": true
 }
