--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "date-fns": "^3.3.1",
     "expo": "~50.0.8",
     "expo-file-system": "^16.0.7",
+    "expo-location": "^16.5.5",
     "expo-status-bar": "~1.11.1",
     "papaparse": "^5.4.1",
     "react": "18.2.0",
     "react-native": "0.73.4",
     "react-native-fs": "^2.20.0",
+    "react-native-maps": "^1.10.3",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
     "react-native-xml2js": "^1.0.3",
